force-app/main/default/objects/ConsolCNTR__c/fields/CargoQuantity__c.field-meta.xml
<CustomField>
    <fullName>CargoQuantity__c</fullName>
    <label>Cargo Quantity</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>