force-app/main/default/objects/ConsolCNTR__c/fields/CDNo__c.field-meta.xml
<CustomField>
    <fullName>CDNo__c</fullName>
    <label>CD No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>