force-app/main/default/objects/ConsolCNTR__c/fields/Consolidation__c.field-meta.xml
<CustomField>
    <fullName>Consolidation__c</fullName>
    <label>Consolidation</label>
    <referenceTo>MasterAnken__c</referenceTo>
    <relationshipLabel>CONSOL CNTR</relationshipLabel>
    <relationshipName>ConsolCNTR</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>