force-app/main/default/objects/ConsolCNTR__c/fields/ContainerCopyStatus__c.field-meta.xml
<CustomField>
    <fullName>ContainerCopyStatus__c</fullName>
    <label>Container Copy Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RecordCreationStatus</valueSetName>
    </valueSet>
</CustomField>