force-app/main/default/objects/ConsolCNTR__c/fields/ContainerSummary__c.field-meta.xml
<CustomField>
    <fullName>ContainerSummary__c</fullName>
    <formula>&apos;Cont Type: &apos;+TEXT( ContainerType__c )+&apos;| Cont Number: &apos;+ ContainerNO__c +&apos;| Seal No: &apos;+ SealNo__c +&apos;| Cargo Quantity: &apos;+ TEXT(CargoQuantity__c)+&apos; &apos;+ TEXT(CargoUnit__c)+&apos;(s)&apos;  +&apos;| G.W: &apos;+ TEXT(GrossWeightKg__c) +&apos; Kg&apos;+&apos;| CBM: &apos;+ TEXT(MeasurementCBM__c)</formula>
    <label>Container Summary</label>
    <type>Text</type>
</CustomField>