force-app/main/default/objects/ConsolCNTR__c/fields/FMSSO1__c.field-meta.xml
<CustomField>
    <fullName>FMSSO1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FMS S/O-1</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Consolidation__c</field>
            <operation>equals</operation>
            <valueField>CustomObject1__c.MasterAnkenName__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>CustomObject1__c</referenceTo>
    <relationshipLabel>CONSOL CNTR(FMS S/O-1)</relationshipLabel>
    <relationshipName>ConsolCNTRSO1</relationshipName>
    <type>Lookup</type>
</CustomField>