force-app/main/default/objects/ConsolCNTR__c/fields/FullOrPartMode__c.field-meta.xml
<CustomField>
    <fullName>FullOrPartMode__c</fullName>
    <label>Full or Part Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ContainerMode</valueSetName>
    </valueSet>
</CustomField>