force-app/main/default/objects/ConsolCNTR__c/fields/GrossWeightKg__c.field-meta.xml
<CustomField>
    <fullName>GrossWeightKg__c</fullName>
    <label>Gross Weight(Kg)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>