force-app/main/default/objects/ConsolCNTR__c/fields/MaxGrossWeightKg__c.field-meta.xml
<CustomField>
    <fullName>MaxGrossWeightKg__c</fullName>
    <label>Max Gross Weight(Kg)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>