force-app/main/default/objects/ConsolCNTR__c/fields/SealNo__c.field-meta.xml
<CustomField>
    <fullName>SealNo__c</fullName>
    <label>Seal Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>