force-app/main/default/objects/ConsolCNTR__c/fields/VesselVoyageNo__c.field-meta.xml
<CustomField>
    <fullName>VesselVoyageNo__c</fullName>
    <label>Vessel Voyage No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>