force-app/main/default/objects/ConsolCNTR__c/fields/WeighingDate__c.field-meta.xml
<CustomField>
    <fullName>WeighingDate__c</fullName>
    <label>Weighing Date</label>
    <type>Date</type>
</CustomField>