force-app/main/default/objects/ConsolCNTR__c/recordTypes/ConsolCNTR.recordType-meta.xml
<RecordType>
    <fullName>ConsolCNTR</fullName>
    <active>true</active>
    <label>Consol CNTR</label>
</RecordType>